# Fractal3d

./: CMakeLists.txt  README.md  cpu_fractal.hpp  cpufractal_main.cpp  cudafractal_main.cpp  fractal_main.cpp  fractals.cpp  fractals.hpp  fractals2d.hpp  fractals3d.hpp  mesh_vis.cpp  mesh_vis.h  ocl_fractal.cl  ocl_helpers.hpp  oclfractal_main.cpp
cmake/Modules/: FindOpenCL.cmake
cuda_fractals/: fractal3d.cu
fractal_gen/: CMakeLists.txt  cpu_fractal.hpp  fractal_generator.hpp  fractals.cpp  fractals2d.hpp  fractals3d.hpp
fractal_gen/cpu_fractals/: CMakeLists.txt  cpufractal_generator.hpp  fractalgen3d.hpp
fractal_gen/cuda_fractals/: .fractal3d.cu.swp  .fractal3d.h.swp  .fractalgen3d.hpp.swp  CMakeLists.txt  cudafractal_generator.hpp  fractal3d.cu  fractal3d.h  fractalgen3d.hpp
fractal_gen/ocl_fractals/: fractalgen2d.hpp  fractalgen3d.hpp  oclfractal_generator.hpp
fractal_gen/ocl_fractals/kernels/: fractal2d.cl  fractal3d.cl
ocl_fractals/: fractal3d.cl
util/: compare.hpp  fractal_helpers.hpp  ocl_helpers.hpp
visualize/: CMakeLists.txt
visualize/ogre_vis/: CMakeLists.txt  ogre_util.cpp  ogre_util.hpp  ogre_vis.cpp  ogre_vis.hpp
visualize/ogre_vis/controller/: CMakeLists.txt  Controller.cpp  Controller.hpp  ControllerUtil.hpp  InputListener.cpp  InputListener.hpp
visualize/vtk_vis/: CMakeLists.txt  mesh_vis.cpp  mesh_vis.h
